--- a/requirements.txt
+++ b/requirements.txt
@@ -1,88 +1,21 @@
-
-aiofiles==24.1.0
 aiogram==3.22.0
-aiogram.contrib==1.1.4
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-annotated-types==0.7.0
-anyio==4.12.0
-asgiref==3.9.1
-asyncpg==0.31.0
-attrs==25.3.0
-cachetools==5.5.2
-certifi==2025.7.14
-cffi==1.17.1
-charset-normalizer==3.4.2
+aiogram.contrib==1.1.4 # Agar eski kod ishlatilgan bo'lsa qoldiriladi
+magic-filter==1.0.12
+python-telegram-bot==22.5
+psycopg2-binary==2.9.11
+# Agar kerak bo'lmasa, olib tashlang
 contourpy==1.2.0
 crispy==0.7.4
 cycler==0.12.1
-Django==5.2.4
-django-ckeditor==6.5.1
-django-cors-headers==4.7.0
-django-crispy-forms==1.14.0
-django-jazzmin==2.6.0
-django-js-asset==2.0.0
-
-django_urls==1.1.3
-djangorestframework==3.16.0
 et_xmlfile==2.0.0
 fabio==2023.10.0
-
-frozenlist==1.8.0
-google-auth==2.40.3
-google-auth-oauthlib==1.2.2
-gspread==6.2.1
-h11==0.16.0
 h5py==3.10.0
 hdf5plugin==4.3.0
-httpcore==1.0.9
-httplib2==0.22.0
-httpx==0.28.1
-idna==3.10
 kiwisolver==1.4.5
 lxml==4.9.3
-magic-filter==1.0.12
 matplotlib==3.8.2
-multidict==6.7.0
 numpy==1.26.2
-oauth2client==4.1.3
-oauthlib==3.3.1
 openpyxl==3.1.5
-outcome==1.3.0.post0
-packaging==23.2
-
-propcache==0.4.1
-
-psycopg2-binary==2.9.11
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.10
-pydantic_core==2.33.2
-pyparsing==3.1.1
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.13.0
-PySocks==1.7.1
 python-dateutil==2.8.2
-python-telegram-bot==22.5
-requests==2.32.4
-requests-oauthlib==2.0.0
-rsa==4.9.1
-selenium==4.34.2
 silx==1.1.2
-six==1.16.0
-sniffio==1.3.1
 sortedcontainers==2.4.0
-sqlparse==0.4.3
-trio==0.30.0
-trio-websocket==0.12.2
-typing-inspection==0.4.2
-typing_extensions==4.14.1
-tzdata==2022.7
-urllib3==2.5.0
-websocket-client==1.8.0
-wsproto==1.2.0
-yarl==1.22.0
-
