--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ aiogram==3.22.0
 aiogram.contrib==1.1.4 # Agar eski kod ishlatilgan bo'lsa qoldiriladi
 magic-filter==1.0.12
 python-telegram-bot==22.5
+psycopg2-binary==2.9.11
